# insight-tracker

./: .flutter-plugins  .flutter-plugins-dependencies  docker-compose.yml  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset
app/: pubspec.yaml
backend/: .dockerignore  .env.example  .flake8  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  Dockerfile  Makefile  main.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py  deps.py  middleware.py  router.py
backend/app/api/endpoints/: __init__.py  ai_assistant.py  auth.py  docs.py  insights.py  relationships.py
backend/app/core/: __init__.py  config.py  errors.py  health.py  logging.py  metrics.py  rate_limits.py  security.py
backend/app/db/: __init__.py  base.py  cache.py  consistency.py  database.py  mongodb.py  neo4j.py  redis.py  schema_validation.py  session.py
backend/app/db/models/: __init__.py  insight_schema.py  relationship_schema.py  user_schema.py
backend/app/middleware/: cache.py  rate_limit.py
backend/app/models/: base.py  insight.py  relationship.py  user.py
backend/app/schemas/: __init__.py  base.py  insight.py  user.py
backend/app/services/: __init__.py  search.py
backend/app/services/ai/: encryption.py  training.py
backend/app/services/audio/: processing.py  transcription.py
backend/app/tasks/: __init__.py  insight_processing.py  model_training.py  nlp_tasks.py  worker.py
backend/app/utils/: __init__.py
backend/tests/: conftest.py  test_api_health.py
backend/tests/factories/: __init__.py  insight.py  user.py
docs/: database-architecture.md  development-environment.md  frontend-specs.md  infrastructure-containers.md  project-structure.md  project-summary.md  roadmap-schedule.md
frontend/: README.md  analysis_options.yaml  pubspec.yaml
project/: ai-implementation.md
project-docs/: backend-specs.md  project-summary.md
(+113 files in other folders)
